--- a/application/index/view/admin/images/index.html
+++ b/application/index/view/admin/images/index.html
@@ -3,7 +3,7 @@
 {block name="title"}图片管理 - {$config.site_name}{/block}
 
 {block name="css"}
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.5.0/viewer.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/viewerjs@1.5.0/dist/viewer.min.css">
 {/block}
 
 {block name="main"}
@@ -78,7 +78,7 @@
 {/block}
 
 {block name="js"}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.5.0/viewer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/viewerjs@1.5.0/dist/viewer.min.js"></script>
 <script src="/static/jquery-viewer/1.2.0/js/jquery-viewer.js"></script>
 <script>
   $(function () {
