--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -12,7 +12,7 @@
   {block name="css"}{/block}
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" href="/static/app/iconfont/iconfont.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/mdui/0.4.3/css/mdui.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@0.4.3/dist/css/mdui.min.css">
   <link rel="stylesheet" href="/static/app/css/app.css?v=1.3">
   <link rel="stylesheet" href="/static/app/css/markdown.css?v=1.0">
   <!--[if IE]>
@@ -140,10 +140,10 @@
   </div>
 </footer>
 {/block}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mdui/0.4.3/js/mdui.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.6/clipboard.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.8.0/marked.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/mdui@0.4.3/dist/js/mdui.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked@0.8.0/marked.min.js"></script>
 <script src="/static/app/js/app.js?v=1.1"></script>
 {block name="js"}{/block}
 <script>
