--- a/application/index/view/user/images.html
+++ b/application/index/view/user/images.html
@@ -4,7 +4,7 @@
 
 {block name="css"}
 <link rel="stylesheet" href="/static/contextjs/css/context.standalone.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.5.0/viewer.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/viewerjs@1.5.0/dist/viewer.min.css">
 {/block}
 
 {block name="main"}
@@ -117,7 +117,7 @@
 
 {block name="js"}
 <script src="/static/contextjs/js/context.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.5.0/viewer.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/viewerjs@1.5.0/dist/viewer.min.js"></script>
 <script src="/static/jquery-viewer/1.2.0/js/jquery-viewer.js"></script>
 <script>
   $(function () {
