--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -123,10 +123,14 @@ main {
       padding: 12px 28px;
     }
     div.item {
+      i.mdui-icon {
+        float: left;
+        font-size: 3.7rem;
+      }
       & > div {
         border-radius: 3px;
         p {
-          margin-bottom: 20px;
+          margin-bottom: 25px;
         }
       }
     }
