:sparkles: 增加 dark 模式(小声bb, 微信什么时候出)

--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -19,7 +19,7 @@
   <script>window.location.href = '/compatibility.html';</script>
   <![endif]-->
 </head>
-<body class="mdui-theme-accent-indigo mdui-appbar-with-toolbar {if cookie('?menu') and cookie('menu') eq 'open'}mdui-drawer-body-left{/if}">
+<body class="mdui-theme-accent-indigo mdui-appbar-with-toolbar {if cookie('?menu') and cookie('menu') eq 'open'}mdui-drawer-body-left{/if} {if cookie('theme') eq 'dark'} mdui-theme-layout-dark{/if}">
 {$config.custom_style|raw}
 {block name="header"}
 <div class="mdui-appbar mdui-appbar-fixed">
@@ -32,6 +32,10 @@
       {if $user.is_admin}
       <span id="update" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">&#xe923;</i></span>
       {/if}
+    <!-- Theme -->
+    <a id="set-theme" href="javascript:app.toggleTheme()" class="mdui-btn mdui-btn-icon">
+      <i class="mdui-icon material-icons">{if cookie('theme') eq 'dark'}&#xe3ac;{else/}&#xe3a9;{/if}</i>
+    </a>
     <!-- User -->
     <a href="javascript:void(0)" mdui-menu="{target: '#user'}" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">&#xe853;</i></a>
     <ul class="mdui-menu" id="user">
@@ -45,13 +49,6 @@
       </li>
     </ul>
     {/if}
-    <!-- More -->
-    <!--<span mdui-menu="{target: '#more'}" class="mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">&#xe5d4;</i></span>
-    <ul class="mdui-menu" id="more">
-      <li class="mdui-menu-item">
-        <a href="https://www.wispx.cn" target="_blank" class="mdui-ripple">熊二哈的猫窝</a>
-      </li>
-    </ul>-->
   </div>
 </div>
 {/block}
@@ -144,7 +141,7 @@
 <script src="https://cdn.jsdelivr.net/npm/mdui@0.4.3/dist/js/mdui.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.6/dist/clipboard.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/marked@0.8.0/marked.min.js"></script>
-<script src="/static/app/js/app.js?v=1.1"></script>
+<script src="/static/app/js/app.js?v=1.2"></script>
 {block name="js"}{/block}
 <script>
   var ver = '{$config.system_version}';
