--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -144,6 +144,9 @@ main {
     .mdui-textfield-label {
       pointer-events: inherit;
     }
+    .mdui-textfield {
+      overflow: inherit;
+    }
   }
 
   // 我的图片
