--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -587,6 +587,10 @@ main {
   }
 }
 
+#fab-buttons > button {
+  margin-bottom: 3.6rem;
+}
+
 #search-form {
   .search-input {
     display: inline-block;
@@ -604,6 +608,7 @@ footer {
   color: #999;
   text-align: left;
   background-color: #f5f5f5;
+  z-index: -1;
 }
 
 .pagination {
