:lipstick: 改进用户列表多选操作

--- a/application/index/view/admin/group/index.html
+++ b/application/index/view/admin/group/index.html
@@ -115,8 +115,8 @@
     </div>
   </div>
 </div>
-<div id="fab-buttons">
-  <button class="mdui-fab mdui-fab-fixed mdui-ripple mdui-color-red" mdui-dialog="{target: '#add-dialog'}">
+<div class="mdui-fab-wrapper" id="fab-buttons">
+  <button class="mdui-fab mdui-ripple mdui-color-purple" mdui-dialog="{target: '#add-dialog'}">
     <i class="mdui-icon material-icons">add</i>
   </button>
 </div>
