--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -587,8 +587,8 @@ main {
   }
 }
 
-#fab-buttons > button {
-  margin-bottom: 3.6rem;
+#fab-buttons.mdui-fab-wrapper {
+  margin-bottom: 4rem;
 }
 
 #search-form {
