:recycle: 重构接口权限认证方式

--- a/application/index/view/admin/group/index.html
+++ b/application/index/view/admin/group/index.html
@@ -100,7 +100,7 @@
           </select>
         </div>
         <div class="mdui-textfield">
-          <label class="mdui-textfield-label">注册默认</label>
+          <label class="mdui-textfield-label">是否默认</label>
           <label class="mdui-switch">
             <input type="checkbox" name="default" value="1"/>
             <i class="mdui-switch-icon"></i>
