--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -727,7 +727,15 @@ body.mdui-theme-layout-dark {
   }
 
   main {
-
+    .mask {
+      background-color: rgba(47, 45, 45, 0.47058824);
+      .content {
+        .mdui-color-white {
+          color: white !important;
+          background-color: rgba(76, 76, 76, 0.78) !important;
+        }
+      }
+    }
     .images-container {
       .folders-box, .images-box {
         .item {
