:wrench: 去除 mysqli 安装条件, 换成 PDO

--- a/application/index/view/install/index.html
+++ b/application/index/view/install/index.html
@@ -76,10 +76,10 @@
       </tr>
       <tr>
         <td align="right">
-          mysqli：
+          PDO 拓展：
         </td>
         <td align="left">
-          {if ($isMysqli) }
+          {if ($pdo) }
           <i class="mdui-icon material-icons mdui-text-color-green">&#xe86c;</i>
           {else/}
           <i class="mdui-icon material-icons mdui-text-color-red">&#xe5c9;</i>
