:sparkles: 增加单用户站点模式

--- a/public/static/app/css/home.css
+++ b/public/static/app/css/home.css
@@ -84,7 +84,7 @@ body #mask {
   height: 100%;
   background-image: url("/static/app/images/bg.jpg");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: center;
   filter: blur(0px);
   transition: filter 0.5s, background-size 0.5s;
@@ -160,6 +160,5 @@ body.fade #login-box {
 }
 body.fade #bg {
   filter: blur(2px);
-  background-size: 105% 105%;
 }
 /*# sourceMappingURL=home.css.map */
