--- a/public/static/app/css/home.less
+++ b/public/static/app/css/home.less
@@ -54,7 +54,7 @@ body, body #mask {
   height: 100%;
   background-image: url("/static/app/images/bg.jpg");
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: center;
   filter: blur(0px);
   transition: filter .5s, background-size .5s;
@@ -138,6 +138,5 @@ body.fade {
   }
   #bg {
     filter: blur(2px);
-    background-size: 105% 105%;
   }
 }
