--- a/public/static/app/css/home.less
+++ b/public/static/app/css/home.less
@@ -85,6 +85,7 @@ body, body #mask {
   opacity: .4;
   background-color: #1b1f23;
   z-index: 1;
+  transition: all 1s;
 }
 
 #login-box {
@@ -138,5 +139,8 @@ body.fade {
   }
   #bg {
     filter: blur(2px);
+  }
+  #mask {
+    opacity: .7;
   }
 }
