--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -700,6 +700,9 @@ body.mdui-theme-layout-dark {
 
     .highlight pre, pre {
       background-color: #585858;
+      code {
+        color: #ececec;
+      }
     }
 
     table {
