--- a/public/static/app/css/app.less
+++ b/public/static/app/css/app.less
@@ -705,6 +705,10 @@ body.mdui-theme-layout-dark {
       }
     }
 
+    p code {
+      background-color: rgba(255, 255, 255, 0.13);
+    }
+
     table {
       tr {
         background-color: #4c4c4c;
