--- a/application/index/view/common/base.html
+++ b/application/index/view/common/base.html
@@ -132,7 +132,7 @@
 <footer>
   <div class="mdui-container">
     Copyright &copy; 2018 - present <a href="https://www.lsky.pro">Lsky Pro</a>. All rights reserved.
-    {if $config.icp_number}<a href="http://beian.miit.gov.cn" target="_blank">{$config.icp_number}</a>.{/if}
+    {if $config.icp_number}<a href="https://beian.miit.gov.cn/" target="_blank">{$config.icp_number}</a>.{/if}
     请勿上传违反中国大陆和香港法律的图片，违者后果自负。
   </div>
 </footer>
