--- a/application/index/view/index/api.html
+++ b/application/index/view/index/api.html
@@ -199,7 +199,7 @@
   "url": "http://域名/2018/12/08/5c0b519f44701.jpg"
 }</pre>
             </td>
-            <td>获取的token数据</td>
+            <td>图片数据</td>
           </tr>
           </tbody>
         </table>
@@ -407,13 +407,13 @@ Content-Type: image/png
             <td>是否是可疑图片, (0:否, 1:是)</td>
           </tr>
           <tr>
-            <td>update_time</td>
+            <td>upload_time</td>
             <td>Number</td>
             <td>1572491936</td>
             <td>图片上传时间</td>
           </tr>
           <tr>
-            <td>update_date</td>
+            <td>upload_date</td>
             <td>String</td>
             <td>2019-10-31 11:18:56</td>
             <td>图片上传日期</td>
